Fixed textlabel appearance in Mozillas.  textare styling in KHTML seems impossible... We should, instead of textarea, use a customized Javascript input device, there is too much desktop-theme dependency and unclear CSS-acceptance for textare, input, checkboxes and select-lists.

--- a/httpdocs/widgets/themes/kde/textlabel.css
+++ b/httpdocs/widgets/themes/kde/textlabel.css
@@ -48,6 +48,16 @@ div.textlabelView_nocanvas textarea
 	/*white-space:normal;*/
 	/*white-space:pre-line;*/
 }
+div.textlabelView p,
+div.textlabelView_nocanvas p,
+div.textlabelView pre,
+div.textlabelView_nocanvas pre
+{
+	/* Compensate for Firefox' extra padding in textareas.  In KHTML,
+	   textare styling seems impossible... */ 
+	padding-left:1px;
+	padding-right:1px;
+}
 div.textlabelView input,
 div.textlabelView_nocanvas input,
 div.textlabelView textarea,
